二进制相加得到2进制的形式

--- a/base_algorithm/02进制转换.md
+++ b/base_algorithm/02进制转换.md
@@ -9,3 +9,19 @@ static String toBinary(int num){
     }
 }
 ```
+### 2进制相加得到2进制的形式
+```java
+static String plusBinary(String a,String b){
+    int ca=0;
+    StringBuilder sb=new StringBuilder();
+    for(int i=a.lenght()-1,j=b.lenght()-1;j>=0||i>=0;j--,i--){
+        int sum=ca;
+        sum += i>=0?a.charAt(i)-'0':0;
+        sum += j>=0?b.charAt(j)-'0':0;
+        sb.append(sum%2);//追加余数，非0即1
+        ca+=sum/2;//逢2进1
+    }
+    if(ca==1)sb.append(1);
+    return sb.reverse().toString();
+}
+```
